game_sources = [
    'Weather/Weather.cpp',
    'OutdoorPvP/OutdoorPvPEP.cpp',
    'OutdoorPvP/OutdoorPvPTF.cpp',
    'OutdoorPvP/OutdoorPvPSI.cpp',
    'OutdoorPvP/OutdoorPvPHP.cpp',
    'OutdoorPvP/OutdoorPvPGH.cpp',
    'OutdoorPvP/OutdoorPvP.cpp',
    'OutdoorPvP/OutdoorPvPZM.cpp',
    'OutdoorPvP/OutdoorPvPNA.cpp',
    'OutdoorPvP/OutdoorPvPMgr.cpp',
    'GMTickets/GMTicketMgr.cpp',
    'GMTickets/GMTicketHandler.cpp',
    'World/WorldStateVariableManager.cpp',
    'World/World.cpp',
    'World/WorldStateExpression.cpp',
    'World/WorldState.cpp',
    'Trade/TradeHandler.cpp',
    'Anticheat/module/Antispam/antispam.cpp',
    'Anticheat/module/Antispam/antispammgr.cpp',
    'Anticheat/module/config.cpp',
    'Anticheat/module/Warden/wardenmodule.cpp',
    'Anticheat/module/Warden/wardenmac.cpp',
    'Anticheat/module/Warden/wardenmodulemgr.cpp',
    'Anticheat/module/Warden/wardenscan.cpp',
    'Anticheat/module/Warden/wardenwin.cpp',
    'Anticheat/module/Warden/warden.cpp',
    'Anticheat/module/Warden/wardenscanmgr.cpp',
    'Anticheat/module/AddonHandler.cpp',
    'Anticheat/module/libanticheat.cpp',
    'Anticheat/module/anticheatchatcommandsfunctions.cpp',
    'Anticheat/module/Movement/movement.cpp',
    'BattleGround/BattleGroundMgr.cpp',
    'BattleGround/BattleGroundHandler.cpp',
    'BattleGround/BattleGroundRL.cpp',
    'BattleGround/BattleGroundIC.cpp',
    'BattleGround/BattleGround.cpp',
    'BattleGround/BattleGroundAV.cpp',
    'BattleGround/BattleGroundWS.cpp',
    'BattleGround/BattleGroundSA.cpp',
    'BattleGround/BattleGroundEY.cpp',
    'BattleGround/BattleGroundAB.cpp',
    'BattleGround/BattleGroundDS.cpp',
    'BattleGround/BattleGroundRV.cpp',
    'BattleGround/BattleGroundNA.cpp',
    'BattleGround/BattleGroundBE.cpp',
    'Entities/SkillHandler.cpp',
    'Entities/MiscHandler.cpp',
    'Entities/QueryHandler.cpp',
    'Entities/Corpse.cpp',
    'Entities/ObjectGuid.cpp',
    'Entities/StatSystem.cpp',
    'Entities/Bag.cpp',
    'Entities/CharacterHandler.cpp',
    'Entities/Pet.cpp',
    'Entities/ItemHandler.cpp',
    'Entities/Relations.cpp',
    'Entities/NPCHandler.cpp',
    'Entities/RafHandler.cpp',
    'Entities/Vehicle.cpp',
    'Entities/CreatureLinkingMgr.cpp',
    'Entities/Taxi.cpp',
    'Entities/DynamicObject.cpp',
    'Entities/Totem.cpp',
    'Entities/PetHandler.cpp',
    'Entities/Object.cpp',
    'Entities/Transports.cpp',
    'Entities/GossipDef.cpp',
    'Entities/ItemEnchantmentMgr.cpp',
    'Entities/UpdateData.cpp',
    'Entities/EntitiesMgr.cpp',
    'Entities/GameObject.cpp',
    'Entities/Camera.cpp',
    'Entities/TemporarySpawn.cpp',
    'Entities/PetitionsHandler.cpp',
    'Entities/ItemPrototype.cpp',
    'Entities/Creature.cpp',
    'Entities/CreatureSettings.cpp',
    'Entities/VehicleHandler.cpp',
    'Entities/ObjectVisibility.cpp',
    'Entities/Item.cpp',
    'Entities/Unit.cpp',
    'Entities/Player.cpp',
    'Entities/UpdateFields.cpp',
    'GameEvents/GameEventMgr.cpp',
    'GameEvents/moon.cpp',
    'AI/ScriptDevAI/base/pet_ai.cpp',
    'AI/ScriptDevAI/base/guard_ai.cpp',
    'AI/ScriptDevAI/base/CombatAI.cpp',
    'AI/ScriptDevAI/base/BossAI.cpp',
    'AI/ScriptDevAI/base/follower_ai.cpp',
    'AI/ScriptDevAI/base/TimerAI.cpp',
    'AI/ScriptDevAI/base/escort_ai.cpp',
    'AI/ScriptDevAI/include/sc_grid_searchers.cpp',
    'AI/ScriptDevAI/include/sc_instance.cpp',
    'AI/ScriptDevAI/include/sc_creature.cpp',
    'AI/ScriptDevAI/system/ScriptLoader.cpp',
    'AI/ScriptDevAI/system/system.cpp',
    'AI/ScriptDevAI/ScriptDevAIMgr.cpp',
    'AI/BaseAI/GuardAI.cpp',
    'AI/BaseAI/CreatureAI.cpp',
    'AI/BaseAI/PetAI.cpp',
    'AI/BaseAI/GuardianAI.cpp',
    'AI/BaseAI/PossessedAI.cpp',
    'AI/BaseAI/TotemAI.cpp',
    'AI/BaseAI/UnitAI.cpp',
    'AI/BaseAI/GameObjectAI.cpp',
    'AI/BaseAI/NullCreatureAI.cpp',
    'AI/EventAI/CreatureEventAI.cpp',
    'AI/EventAI/CreatureEventAIMgr.cpp',
    'AI/CreatureAISelector.cpp',
    'AI/CreatureAIRegistry.cpp',
    'AI/PlayerAI/PlayerAI.cpp',
    'AI/PlayerAI/CharmAI.cpp',
    'Calendar/Calendar.cpp',
    'Calendar/CalendarHandler.cpp',
    'Models/M2Stores.cpp',
    'Cinematics/CinematicMgr.cpp',
    'Arena/ArenaTeam.cpp',
    'Arena/ArenaTeamHandler.cpp',
    'VoiceChat/VoiceChatHandler.cpp',
    'DBScripts/ScriptMgr.cpp',
    'Maps/SpawnGroup.cpp',
    'Maps/GridMap.cpp',
    'Maps/Map.cpp',
    'Maps/SpawnManager.cpp',
    'Maps/MapDataContainer.cpp',
    'Maps/TaxiHandler.cpp',
    'Maps/InstanceData.cpp',
    'Maps/TransportMgr.cpp',
    'Maps/ObjectPosSelector.cpp',
    'Maps/TransportSystem.cpp',
    'Maps/MapManager.cpp',
    'Maps/MapPersistentStateMgr.cpp',
    'Maps/MapUpdater.cpp',
    'Quests/QuestDef.cpp',
    'Quests/QuestHandler.cpp',
    'MotionGenerators/IdleMovementGenerator.cpp',
    'MotionGenerators/PathFinder.cpp',
    'MotionGenerators/TargetedMovementGenerator.cpp',
    'MotionGenerators/HomeMovementGenerator.cpp',
    'MotionGenerators/PointMovementGenerator.cpp',
    'MotionGenerators/MovementHandler.cpp',
    'MotionGenerators/WrapperMovementGenerator.cpp',
    'MotionGenerators/MotionMaster.cpp',
    'MotionGenerators/MoveMap.cpp',
    'MotionGenerators/WaypointManager.cpp',
    'MotionGenerators/FollowerReference.cpp',
    'MotionGenerators/WaypointMovementGenerator.cpp',
    'MotionGenerators/MoveMapSharedDefines.cpp',
    'MotionGenerators/MovementGenerator.cpp',
    'MotionGenerators/RandomMovementGenerator.cpp',
    'MotionGenerators/PathMovementGenerator.cpp',
    'Tools/CharacterDatabaseCleaner.cpp',
    'Tools/PlayerDump.cpp',
    'Pools/PoolManager.cpp',
    'Guilds/Guild.cpp',
    'Guilds/GuildMgr.cpp',
    'Guilds/GuildHandler.cpp',
    'Battlefield/Battlefield.cpp',
    'Battlefield/BattlefieldWG.cpp',
    'Battlefield/BattlefieldHandler.cpp',
    'Chat/Level2.cpp',
    'Chat/Level1.cpp',
    'Chat/ChannelMgr.cpp',
    'Chat/Level0.cpp',
    'Chat/debugcmds.cpp',
    'Chat/Channel.cpp',
    'Chat/ChatHandler.cpp',
    'Chat/Level3.cpp',
    'Chat/TicketCommands.cpp',
    'Chat/NpcCommands.cpp',
    'Chat/ChannelHandler.cpp',
    'Chat/Chat.cpp',
    'Globals/Locales.cpp',
    'Globals/CombatCondition.cpp',
    'Globals/Conditions.cpp',
    'Globals/GraveyardManager.cpp',
    'Globals/ObjectAccessor.cpp',
    'Globals/ObjectMgr.cpp',
    'Globals/UnitCondition.cpp',
    'AuctionHouse/AuctionHouseHandler.cpp',
    'AuctionHouse/AuctionHouseMgr.cpp',
    'AuctionHouseBot/AuctionHouseBot.cpp',
    'Combat/CombatHandler.cpp',
    'Combat/HostileRefManager.cpp',
    'Combat/DuelHandler.cpp',
    'Combat/CombatManager.cpp',
    'Combat/ThreatManager.cpp',
    'Loot/LootMgr.cpp',
    'Loot/LootHandler.cpp',
    'Spells/Scripts/SpellScript.cpp',
    'Spells/Scripts/Scripting/ClassScripts/Paladin.cpp',
    'Spells/Scripts/Scripting/ClassScripts/Priest.cpp',
    'Spells/Scripts/Scripting/ClassScripts/DeathKnight.cpp',
    'Spells/Scripts/Scripting/ClassScripts/Hunter.cpp',
    'Spells/Scripts/Scripting/ClassScripts/ScalingAuras.cpp',
    'Spells/Scripts/Scripting/ClassScripts/Druid.cpp',
    'Spells/Scripts/Scripting/ClassScripts/Rogue.cpp',
    'Spells/Scripts/Scripting/ClassScripts/Warrior.cpp',
    'Spells/Scripts/Scripting/ClassScripts/Warlock.cpp',
    'Spells/Scripts/Scripting/ClassScripts/Shaman.cpp',
    'Spells/Scripts/Scripting/ClassScripts/Mage.cpp',
    'Spells/SpellHandler.cpp',
    'Spells/Spell.cpp',
    'Spells/SpellAuras.cpp',
    'Spells/UnitAuraProcHandler.cpp',
    'Spells/SpellMgr.cpp',
    'Spells/SpellTargets.cpp',
    'Spells/SpellDefines.cpp',
    'Spells/SpellEffects.cpp',
    'Groups/GroupHandler.cpp',
    'Groups/GroupReference.cpp',
    'Groups/Group.cpp',
    'Social/SocialMgr.cpp',
    'Skills/SkillExtraItems.cpp',
    'Skills/SkillDiscovery.cpp',
    'Vmap/VMapManager2.cpp',
    'Vmap/VMapFactory.cpp',
    'Vmap/BIH.cpp',
    'Vmap/DynamicTree.cpp',
    'Vmap/ModelInstance.cpp',
    'Vmap/WorldModel.cpp',
    'Vmap/TileAssembler.cpp',
    'Vmap/GameObjectModelVmaps.cpp',
    'Vmap/GameObjectModel.cpp',
    'Vmap/MapTree.cpp',
    'Achievements/AchievementMgr.cpp',
    'LFG/LFGQueue.cpp',
    'LFG/LFG.cpp',
    'LFG/LFGMgr.cpp',
    'LFG/LFGHandler.cpp',
    'Server/SQLStorages.cpp',
    'Server/DBCStores.cpp',
    'Server/PacketLog.cpp',
    'Server/Opcodes.cpp',
    'Server/WorldSession.cpp',
    'Server/WorldSocket.cpp',
    'Server/AuthCrypt.cpp',
    'Grids/GridNotifiers.cpp',
    'Grids/ObjectGridLoader.cpp',
    'Grids/GridStates.cpp',
    'Movement/util.cpp',
    'Movement/packet_builder.cpp',
    'Movement/spline.cpp',
    'Movement/MoveSpline.cpp',
    'Movement/MoveSplineInit.cpp',
    'Accounts/AccountMgr.cpp',
    'Reputation/ReputationMgr.cpp',
    'Mails/MassMailMgr.cpp',
    'Mails/MailHandler.cpp',
    'Mails/Mail.cpp'
]

scriptdev_sources = [
    'AI/ScriptDevAI/scripts/battlegrounds/battlegrounds.cpp',
    'AI/ScriptDevAI/scripts/eastern_kingdoms/uldaman/instance_uldaman.cpp',
    'AI/ScriptDevAI/scripts/eastern_kingdoms/uldaman/uldaman.cpp',
    'AI/ScriptDevAI/scripts/eastern_kingdoms/uldaman/boss_archaedas.cpp',
    'AI/ScriptDevAI/scripts/eastern_kingdoms/stranglethorn_vale.cpp',
    'AI/ScriptDevAI/scripts/eastern_kingdoms/arathi_highlands.cpp',
    'AI/ScriptDevAI/scripts/eastern_kingdoms/westfall.cpp',
    'AI/ScriptDevAI/scripts/eastern_kingdoms/karazhan/boss_moroes.cpp',
    'AI/ScriptDevAI/scripts/eastern_kingdoms/karazhan/karazhanScripts.cpp',
    'AI/ScriptDevAI/scripts/eastern_kingdoms/karazhan/bosses_opera.cpp',
    'AI/ScriptDevAI/scripts/eastern_kingdoms/karazhan/boss_curator.cpp',
    'AI/ScriptDevAI/scripts/eastern_kingdoms/karazhan/boss_maiden_of_virtue.cpp',
    'AI/ScriptDevAI/scripts/eastern_kingdoms/karazhan/boss_midnight.cpp',
    'AI/ScriptDevAI/scripts/eastern_kingdoms/karazhan/boss_nightbane.cpp',
    'AI/ScriptDevAI/scripts/eastern_kingdoms/karazhan/boss_prince_malchezaar.cpp',
    'AI/ScriptDevAI/scripts/eastern_kingdoms/karazhan/chess_event.cpp',
    'AI/ScriptDevAI/scripts/eastern_kingdoms/karazhan/karazhan.cpp',
    'AI/ScriptDevAI/scripts/eastern_kingdoms/karazhan/boss_netherspite.cpp',
    'AI/ScriptDevAI/scripts/eastern_kingdoms/karazhan/boss_shade_of_aran.cpp',
    'AI/ScriptDevAI/scripts/eastern_kingdoms/karazhan/boss_terestian_illhoof.cpp',
    'AI/ScriptDevAI/scripts/eastern_kingdoms/loch_modan.cpp',
    'AI/ScriptDevAI/scripts/eastern_kingdoms/stratholme/boss_dathrohan_balnazzar.cpp',
    'AI/ScriptDevAI/scripts/eastern_kingdoms/stratholme/boss_baroness_anastari.cpp',
    'AI/ScriptDevAI/scripts/eastern_kingdoms/stratholme/boss_maleki_the_pallid.cpp',
    'AI/ScriptDevAI/scripts/eastern_kingdoms/stratholme/stratholmeScripts.cpp',
    'AI/ScriptDevAI/scripts/eastern_kingdoms/stratholme/boss_cannon_master_willey.cpp',
    'AI/ScriptDevAI/scripts/eastern_kingdoms/stratholme/stratholme.cpp',
    'AI/ScriptDevAI/scripts/eastern_kingdoms/stratholme/boss_order_of_silver_hand.cpp',
    'AI/ScriptDevAI/scripts/eastern_kingdoms/isle_of_queldanas.cpp',
    'AI/ScriptDevAI/scripts/eastern_kingdoms/undercity.cpp',
    'AI/ScriptDevAI/scripts/eastern_kingdoms/dun_morogh.cpp',
    'AI/ScriptDevAI/scripts/eastern_kingdoms/burning_steppes.cpp',
    'AI/ScriptDevAI/scripts/eastern_kingdoms/silverpine_forest.cpp',
    'AI/ScriptDevAI/scripts/eastern_kingdoms/eversong_woods.cpp',
    'AI/ScriptDevAI/scripts/eastern_kingdoms/scholomance/boss_jandice_barov.cpp',
    'AI/ScriptDevAI/scripts/eastern_kingdoms/scholomance/instance_scholomance.cpp',
    'AI/ScriptDevAI/scripts/eastern_kingdoms/scholomance/scholomance.cpp',
    'AI/ScriptDevAI/scripts/eastern_kingdoms/scholomance/boss_darkmaster_gandling.cpp',
    'AI/ScriptDevAI/scripts/eastern_kingdoms/silvermoon_city.cpp',
    'AI/ScriptDevAI/scripts/eastern_kingdoms/world_eastern_kingdoms.cpp',
    'AI/ScriptDevAI/scripts/eastern_kingdoms/hinterlands.cpp',
    'AI/ScriptDevAI/scripts/eastern_kingdoms/ironforge.cpp',
    'AI/ScriptDevAI/scripts/eastern_kingdoms/sunwell_plateau/boss_felmyst.cpp',
    'AI/ScriptDevAI/scripts/eastern_kingdoms/sunwell_plateau/sunwell_plateauScripts.cpp',
    'AI/ScriptDevAI/scripts/eastern_kingdoms/sunwell_plateau/boss_eredar_twins.cpp',
    'AI/ScriptDevAI/scripts/eastern_kingdoms/sunwell_plateau/boss_kiljaeden.cpp',
    'AI/ScriptDevAI/scripts/eastern_kingdoms/sunwell_plateau/boss_muru.cpp',
    'AI/ScriptDevAI/scripts/eastern_kingdoms/sunwell_plateau/boss_brutallus.cpp',
    'AI/ScriptDevAI/scripts/eastern_kingdoms/sunwell_plateau/boss_kalecgos.cpp',
    'AI/ScriptDevAI/scripts/eastern_kingdoms/sunwell_plateau/sunwell_plateau.cpp',
    'AI/ScriptDevAI/scripts/eastern_kingdoms/tirisfal_glades.cpp',
    'AI/ScriptDevAI/scripts/eastern_kingdoms/deadmines/boss_mr_smite.cpp',
    'AI/ScriptDevAI/scripts/eastern_kingdoms/deadmines/deadmines.cpp',
    'AI/ScriptDevAI/scripts/eastern_kingdoms/deadmines/instance_deadmines.cpp',
    'AI/ScriptDevAI/scripts/eastern_kingdoms/magisters_terrace/magisters_terraceScripts.cpp',
    'AI/ScriptDevAI/scripts/eastern_kingdoms/magisters_terrace/boss_selin_fireheart.cpp',
    'AI/ScriptDevAI/scripts/eastern_kingdoms/magisters_terrace/boss_vexallus.cpp',
    'AI/ScriptDevAI/scripts/eastern_kingdoms/magisters_terrace/boss_priestess_delrissa.cpp',
    'AI/ScriptDevAI/scripts/eastern_kingdoms/magisters_terrace/magisters_terrace.cpp',
    'AI/ScriptDevAI/scripts/eastern_kingdoms/magisters_terrace/boss_felblood_kaelthas.cpp',
    'AI/ScriptDevAI/scripts/eastern_kingdoms/swamp_of_sorrows.cpp',
    'AI/ScriptDevAI/scripts/eastern_kingdoms/blackrock_spire/boss_gyth.cpp',
    'AI/ScriptDevAI/scripts/eastern_kingdoms/blackrock_spire/instance_blackrock_spire.cpp',
    'AI/ScriptDevAI/scripts/eastern_kingdoms/blackrock_spire/boss_pyroguard_emberseer.cpp',
    'AI/ScriptDevAI/scripts/eastern_kingdoms/blackrock_spire/boss_overlord_wyrmthalak.cpp',
    'AI/ScriptDevAI/scripts/eastern_kingdoms/zulaman/boss_nalorakk.cpp',
    'AI/ScriptDevAI/scripts/eastern_kingdoms/zulaman/boss_akilzon.cpp',
    'AI/ScriptDevAI/scripts/eastern_kingdoms/zulaman/zulaman.cpp',
    'AI/ScriptDevAI/scripts/eastern_kingdoms/zulaman/boss_halazzi.cpp',
    'AI/ScriptDevAI/scripts/eastern_kingdoms/zulaman/zulamanScripts.cpp',
    'AI/ScriptDevAI/scripts/eastern_kingdoms/zulaman/boss_malacrass.cpp',
    'AI/ScriptDevAI/scripts/eastern_kingdoms/zulaman/boss_janalai.cpp',
    'AI/ScriptDevAI/scripts/eastern_kingdoms/zulaman/boss_zuljin.cpp',
    'AI/ScriptDevAI/scripts/eastern_kingdoms/sunken_temple/sunken_templeScripts.cpp',
    'AI/ScriptDevAI/scripts/eastern_kingdoms/sunken_temple/sunken_temple.cpp',
    'AI/ScriptDevAI/scripts/eastern_kingdoms/shadowfang_keep/shadowfang_keep.cpp',
    'AI/ScriptDevAI/scripts/eastern_kingdoms/shadowfang_keep/instance_shadowfang_keep.cpp',
    'AI/ScriptDevAI/scripts/eastern_kingdoms/shadowfang_keep/boss_hummel.cpp',
    'AI/ScriptDevAI/scripts/eastern_kingdoms/boss_kazzak.cpp',
    'AI/ScriptDevAI/scripts/eastern_kingdoms/searing_gorge.cpp',
    'AI/ScriptDevAI/scripts/eastern_kingdoms/blackwing_lair/boss_ebonroc.cpp',
    'AI/ScriptDevAI/scripts/eastern_kingdoms/blackwing_lair/boss_flamegor.cpp',
    'AI/ScriptDevAI/scripts/eastern_kingdoms/blackwing_lair/boss_nefarian.cpp',
    'AI/ScriptDevAI/scripts/eastern_kingdoms/blackwing_lair/boss_chromaggus.cpp',
    'AI/ScriptDevAI/scripts/eastern_kingdoms/blackwing_lair/boss_broodlord_lashlayer.cpp',
    'AI/ScriptDevAI/scripts/eastern_kingdoms/blackwing_lair/boss_victor_nefarius.cpp',
    'AI/ScriptDevAI/scripts/eastern_kingdoms/blackwing_lair/boss_razorgore.cpp',
    'AI/ScriptDevAI/scripts/eastern_kingdoms/blackwing_lair/boss_firemaw.cpp',
    'AI/ScriptDevAI/scripts/eastern_kingdoms/blackwing_lair/boss_vaelastrasz.cpp',
    'AI/ScriptDevAI/scripts/eastern_kingdoms/blackwing_lair/blackwing_lair.cpp',
    'AI/ScriptDevAI/scripts/eastern_kingdoms/scarlet_monastery/instance_scarlet_monastery.cpp',
    'AI/ScriptDevAI/scripts/eastern_kingdoms/scarlet_monastery/boss_arcanist_doan.cpp',
    'AI/ScriptDevAI/scripts/eastern_kingdoms/scarlet_monastery/boss_herod.cpp',
    'AI/ScriptDevAI/scripts/eastern_kingdoms/scarlet_monastery/boss_mograine_and_whitemane.cpp',
    'AI/ScriptDevAI/scripts/eastern_kingdoms/scarlet_monastery/boss_headless_horseman.cpp',
    'AI/ScriptDevAI/scripts/eastern_kingdoms/western_plaguelands.cpp',
    'AI/ScriptDevAI/scripts/eastern_kingdoms/alterac_mountains.cpp',
    'AI/ScriptDevAI/scripts/eastern_kingdoms/molten_core/boss_sulfuron_harbinger.cpp',
    'AI/ScriptDevAI/scripts/eastern_kingdoms/molten_core/boss_magmadar.cpp',
    'AI/ScriptDevAI/scripts/eastern_kingdoms/molten_core/boss_garr.cpp',
    'AI/ScriptDevAI/scripts/eastern_kingdoms/molten_core/molten_core.cpp',
    'AI/ScriptDevAI/scripts/eastern_kingdoms/molten_core/molten_coreScripts.cpp',
    'AI/ScriptDevAI/scripts/eastern_kingdoms/molten_core/boss_shazzrah.cpp',
    'AI/ScriptDevAI/scripts/eastern_kingdoms/molten_core/boss_gehennas.cpp',
    'AI/ScriptDevAI/scripts/eastern_kingdoms/molten_core/boss_lucifron.cpp',
    'AI/ScriptDevAI/scripts/eastern_kingdoms/molten_core/boss_majordomo_executus.cpp',
    'AI/ScriptDevAI/scripts/eastern_kingdoms/molten_core/boss_baron_geddon.cpp',
    'AI/ScriptDevAI/scripts/eastern_kingdoms/molten_core/boss_golemagg.cpp',
    'AI/ScriptDevAI/scripts/eastern_kingdoms/molten_core/boss_ragnaros.cpp',
    'AI/ScriptDevAI/scripts/eastern_kingdoms/scarlet_enclave/world_map_ebon_hold.cpp',
    'AI/ScriptDevAI/scripts/eastern_kingdoms/scarlet_enclave/ebon_hold.cpp',
    'AI/ScriptDevAI/scripts/eastern_kingdoms/blackrock_depths/boss_ambassador_flamelash.cpp',
    'AI/ScriptDevAI/scripts/eastern_kingdoms/blackrock_depths/boss_high_interrogator_gerstahn.cpp',
    'AI/ScriptDevAI/scripts/eastern_kingdoms/blackrock_depths/boss_coren_direbrew.cpp',
    'AI/ScriptDevAI/scripts/eastern_kingdoms/blackrock_depths/instance_blackrock_depths.cpp',
    'AI/ScriptDevAI/scripts/eastern_kingdoms/blackrock_depths/blackrock_depths.cpp',
    'AI/ScriptDevAI/scripts/eastern_kingdoms/blackrock_depths/boss_general_angerforge.cpp',
    'AI/ScriptDevAI/scripts/eastern_kingdoms/blackrock_depths/boss_emperor_dagran_thaurissan.cpp',
    'AI/ScriptDevAI/scripts/eastern_kingdoms/blasted_lands.cpp',
    'AI/ScriptDevAI/scripts/eastern_kingdoms/wetlands.cpp',
    'AI/ScriptDevAI/scripts/eastern_kingdoms/ghostlands.cpp',
    'AI/ScriptDevAI/scripts/eastern_kingdoms/zulgurub/zulgurubScripts.cpp',
    'AI/ScriptDevAI/scripts/eastern_kingdoms/zulgurub/boss_jeklik.cpp',
    'AI/ScriptDevAI/scripts/eastern_kingdoms/zulgurub/boss_thekal.cpp',
    'AI/ScriptDevAI/scripts/eastern_kingdoms/zulgurub/boss_marli.cpp',
    'AI/ScriptDevAI/scripts/eastern_kingdoms/zulgurub/boss_mandokir.cpp',
    'AI/ScriptDevAI/scripts/eastern_kingdoms/zulgurub/boss_renataki.cpp',
    'AI/ScriptDevAI/scripts/eastern_kingdoms/zulgurub/zulgurub.cpp',
    'AI/ScriptDevAI/scripts/eastern_kingdoms/zulgurub/boss_venoxis.cpp',
    'AI/ScriptDevAI/scripts/eastern_kingdoms/zulgurub/boss_hakkar.cpp',
    'AI/ScriptDevAI/scripts/eastern_kingdoms/zulgurub/boss_arlokk.cpp',
    'AI/ScriptDevAI/scripts/eastern_kingdoms/stormwind_city.cpp',
    'AI/ScriptDevAI/scripts/eastern_kingdoms/eastern_plaguelands.cpp',
    'AI/ScriptDevAI/scripts/eastern_kingdoms/redridge_mountains.cpp',
    'AI/ScriptDevAI/scripts/eastern_kingdoms/elwynn_forest.cpp',
    'AI/ScriptDevAI/scripts/eastern_kingdoms/gnomeregan/gnomeregan.cpp',
    'AI/ScriptDevAI/scripts/eastern_kingdoms/gnomeregan/boss_thermaplugg.cpp',
    'AI/ScriptDevAI/scripts/eastern_kingdoms/gnomeregan/instance_gnomeregan.cpp',
    'AI/ScriptDevAI/scripts/world/bosses_emerald_dragons.cpp',
    'AI/ScriptDevAI/scripts/world/guards.cpp',
    'AI/ScriptDevAI/scripts/world/spell_scripts_wotlk.cpp',
    'AI/ScriptDevAI/scripts/world/npc_professions.cpp',
    'AI/ScriptDevAI/scripts/world/areatrigger_scripts.cpp',
    'AI/ScriptDevAI/scripts/world/npcs_special.cpp',
    'AI/ScriptDevAI/scripts/world/lunar_festival.cpp',
    'AI/ScriptDevAI/scripts/world/hallows_end.cpp',
    'AI/ScriptDevAI/scripts/world/midsummer_festival.cpp',
    'AI/ScriptDevAI/scripts/world/brewfest.cpp',
    'AI/ScriptDevAI/scripts/world/shade_of_the_horseman.cpp',
    'AI/ScriptDevAI/scripts/world/scourge_invasion.cpp',
    'AI/ScriptDevAI/scripts/world/world_map_scripts.cpp',
    'AI/ScriptDevAI/scripts/world/suns_reach_reclamation.cpp',
    'AI/ScriptDevAI/scripts/world/mob_generic_creature.cpp',
    'AI/ScriptDevAI/scripts/world/item_scripts_wotlk.cpp',
    'AI/ScriptDevAI/scripts/world/item_scripts.cpp',
    'AI/ScriptDevAI/scripts/world/boss_highlord_kruul.cpp',
    'AI/ScriptDevAI/scripts/world/spell_scripts.cpp',
    'AI/ScriptDevAI/scripts/world/war_effort.cpp',
    'AI/ScriptDevAI/scripts/world/childrens_week_tbc.cpp',
    'AI/ScriptDevAI/scripts/world/quest_scripts.cpp',
    'AI/ScriptDevAI/scripts/world/go_scripts.cpp',
    'AI/ScriptDevAI/scripts/kalimdor/ashenvale.cpp',
    'AI/ScriptDevAI/scripts/kalimdor/world_kalimdor.cpp',
    'AI/ScriptDevAI/scripts/kalimdor/felwood.cpp',
    'AI/ScriptDevAI/scripts/kalimdor/maraudon/boss_noxxion.cpp',
    'AI/ScriptDevAI/scripts/kalimdor/maraudon/instance_maraudon.cpp',
    'AI/ScriptDevAI/scripts/kalimdor/azshara.cpp',
    'AI/ScriptDevAI/scripts/kalimdor/azuremyst_isle.cpp',
    'AI/ScriptDevAI/scripts/kalimdor/darkshore.cpp',
    'AI/ScriptDevAI/scripts/kalimdor/feralas.cpp',
    'AI/ScriptDevAI/scripts/kalimdor/stonetalon_mountains.cpp',
    'AI/ScriptDevAI/scripts/kalimdor/blackfathom_deeps/instance_blackfathom_deeps.cpp',
    'AI/ScriptDevAI/scripts/kalimdor/wailing_caverns/wailing_cavernsScripts.cpp',
    'AI/ScriptDevAI/scripts/kalimdor/wailing_caverns/wailing_caverns.cpp',
    'AI/ScriptDevAI/scripts/kalimdor/boss_azuregos.cpp',
    'AI/ScriptDevAI/scripts/kalimdor/silithus.cpp',
    'AI/ScriptDevAI/scripts/kalimdor/temple_of_ahnqiraj/boss_twinemperors.cpp',
    'AI/ScriptDevAI/scripts/kalimdor/temple_of_ahnqiraj/temple_of_ahnqiraj.cpp',
    'AI/ScriptDevAI/scripts/kalimdor/temple_of_ahnqiraj/boss_skeram.cpp',
    'AI/ScriptDevAI/scripts/kalimdor/temple_of_ahnqiraj/boss_cthun.cpp',
    'AI/ScriptDevAI/scripts/kalimdor/temple_of_ahnqiraj/boss_huhuran.cpp',
    'AI/ScriptDevAI/scripts/kalimdor/temple_of_ahnqiraj/boss_bug_trio.cpp',
    'AI/ScriptDevAI/scripts/kalimdor/temple_of_ahnqiraj/boss_fankriss.cpp',
    'AI/ScriptDevAI/scripts/kalimdor/temple_of_ahnqiraj/boss_ouro.cpp',
    'AI/ScriptDevAI/scripts/kalimdor/temple_of_ahnqiraj/boss_viscidus.cpp',
    'AI/ScriptDevAI/scripts/kalimdor/temple_of_ahnqiraj/boss_sartura.cpp',
    'AI/ScriptDevAI/scripts/kalimdor/temple_of_ahnqiraj/mob_anubisath_sentinel.cpp',
    'AI/ScriptDevAI/scripts/kalimdor/razorfen_kraul/instance_razorfen_kraul.cpp',
    'AI/ScriptDevAI/scripts/kalimdor/razorfen_kraul/razorfen_kraul.cpp',
    'AI/ScriptDevAI/scripts/kalimdor/tanaris.cpp',
    'AI/ScriptDevAI/scripts/kalimdor/caverns_of_time/culling_of_stratholme/instance_culling_of_stratholme.cpp',
    'AI/ScriptDevAI/scripts/kalimdor/caverns_of_time/culling_of_stratholme/culling_of_stratholme.cpp',
    'AI/ScriptDevAI/scripts/kalimdor/caverns_of_time/hyjal/boss_anetheron.cpp',
    'AI/ScriptDevAI/scripts/kalimdor/caverns_of_time/hyjal/hyjal.cpp',
    'AI/ScriptDevAI/scripts/kalimdor/caverns_of_time/hyjal/boss_kazrogal.cpp',
    'AI/ScriptDevAI/scripts/kalimdor/caverns_of_time/hyjal/boss_rage_winterchill.cpp',
    'AI/ScriptDevAI/scripts/kalimdor/caverns_of_time/hyjal/hyjalAI.cpp',
    'AI/ScriptDevAI/scripts/kalimdor/caverns_of_time/hyjal/hyjalScripts.cpp',
    'AI/ScriptDevAI/scripts/kalimdor/caverns_of_time/hyjal/boss_azgalor.cpp',
    'AI/ScriptDevAI/scripts/kalimdor/caverns_of_time/hyjal/boss_archimonde.cpp',
    'AI/ScriptDevAI/scripts/kalimdor/caverns_of_time/old_hillsbrad/old_hillsbrad.cpp',
    'AI/ScriptDevAI/scripts/kalimdor/caverns_of_time/old_hillsbrad/old_hillsbradScripts.cpp',
    'AI/ScriptDevAI/scripts/kalimdor/caverns_of_time/dark_portal/boss_aeonus.cpp',
    'AI/ScriptDevAI/scripts/kalimdor/caverns_of_time/dark_portal/boss_chrono_lord_deja.cpp',
    'AI/ScriptDevAI/scripts/kalimdor/caverns_of_time/dark_portal/dark_portalScripts.cpp',
    'AI/ScriptDevAI/scripts/kalimdor/caverns_of_time/dark_portal/dark_portal.cpp',
    'AI/ScriptDevAI/scripts/kalimdor/caverns_of_time/dark_portal/boss_temporus.cpp',
    'AI/ScriptDevAI/scripts/kalimdor/ruins_of_ahnqiraj/ruins_of_ahnqirajScripts.cpp',
    'AI/ScriptDevAI/scripts/kalimdor/ruins_of_ahnqiraj/boss_moam.cpp',
    'AI/ScriptDevAI/scripts/kalimdor/ruins_of_ahnqiraj/boss_ossirian.cpp',
    'AI/ScriptDevAI/scripts/kalimdor/ruins_of_ahnqiraj/boss_ayamiss.cpp',
    'AI/ScriptDevAI/scripts/kalimdor/ruins_of_ahnqiraj/boss_rajaxx.cpp',
    'AI/ScriptDevAI/scripts/kalimdor/ruins_of_ahnqiraj/ruins_of_ahnqiraj.cpp',
    'AI/ScriptDevAI/scripts/kalimdor/ruins_of_ahnqiraj/boss_kurinnaxx.cpp',
    'AI/ScriptDevAI/scripts/kalimdor/ruins_of_ahnqiraj/boss_buru.cpp',
    'AI/ScriptDevAI/scripts/kalimdor/dustwallow_marsh.cpp',
    'AI/ScriptDevAI/scripts/kalimdor/zulfarrak/instance_zulfarrak.cpp',
    'AI/ScriptDevAI/scripts/kalimdor/zulfarrak/zulfarrak.cpp',
    'AI/ScriptDevAI/scripts/kalimdor/zulfarrak/boss_zumrah.cpp',
    'AI/ScriptDevAI/scripts/kalimdor/teldrassil.cpp',
    'AI/ScriptDevAI/scripts/kalimdor/winterspring.cpp',
    'AI/ScriptDevAI/scripts/kalimdor/onyxias_lair/boss_onyxia.cpp',
    'AI/ScriptDevAI/scripts/kalimdor/onyxias_lair/instance_onyxias_lair.cpp',
    'AI/ScriptDevAI/scripts/kalimdor/orgrimmar.cpp',
    'AI/ScriptDevAI/scripts/kalimdor/durotar.cpp',
    'AI/ScriptDevAI/scripts/kalimdor/razorfen_downs/instance_razorfen_downs.cpp',
    'AI/ScriptDevAI/scripts/kalimdor/razorfen_downs/razorfen_downs.cpp',
    'AI/ScriptDevAI/scripts/kalimdor/desolace.cpp',
    'AI/ScriptDevAI/scripts/kalimdor/thousand_needles.cpp',
    'AI/ScriptDevAI/scripts/kalimdor/ungoro_crater.cpp',
    'AI/ScriptDevAI/scripts/kalimdor/mulgore.cpp',
    'AI/ScriptDevAI/scripts/kalimdor/the_barrens.cpp',
    'AI/ScriptDevAI/scripts/kalimdor/moonglade.cpp',
    'AI/ScriptDevAI/scripts/kalimdor/thunder_bluff.cpp',
    'AI/ScriptDevAI/scripts/kalimdor/bloodmyst_isle.cpp',
    'AI/ScriptDevAI/scripts/kalimdor/dire_maul/instance_dire_maul.cpp',
    'AI/ScriptDevAI/scripts/kalimdor/dire_maul/dire_maul.cpp',
    'AI/ScriptDevAI/scripts/outland/nagrand.cpp',
    'AI/ScriptDevAI/scripts/outland/hellfire_peninsula.cpp',
    'AI/ScriptDevAI/scripts/outland/tempest_keep/the_mechanar/boss_pathaleon_the_calculator.cpp',
    'AI/ScriptDevAI/scripts/outland/tempest_keep/the_mechanar/boss_nethermancer_sepethrea.cpp',
    'AI/ScriptDevAI/scripts/outland/tempest_keep/the_mechanar/boss_mechano_lord_capacitus.cpp',
    'AI/ScriptDevAI/scripts/outland/tempest_keep/the_mechanar/mechanar.cpp',
    'AI/ScriptDevAI/scripts/outland/tempest_keep/botanica/boss_laj.cpp',
    'AI/ScriptDevAI/scripts/outland/tempest_keep/botanica/boss_warp_splinter.cpp',
    'AI/ScriptDevAI/scripts/outland/tempest_keep/botanica/boss_high_botanist_freywinn.cpp',
    'AI/ScriptDevAI/scripts/outland/tempest_keep/botanica/boss_thorngrin_the_tender.cpp',
    'AI/ScriptDevAI/scripts/outland/tempest_keep/arcatraz/boss_harbinger_skyriss.cpp',
    'AI/ScriptDevAI/scripts/outland/tempest_keep/arcatraz/arcatrazScripts.cpp',
    'AI/ScriptDevAI/scripts/outland/tempest_keep/arcatraz/boss_soccothrates.cpp',
    'AI/ScriptDevAI/scripts/outland/tempest_keep/arcatraz/arcatraz.cpp',
    'AI/ScriptDevAI/scripts/outland/tempest_keep/arcatraz/boss_dalliah.cpp',
    'AI/ScriptDevAI/scripts/outland/tempest_keep/the_eye/boss_void_reaver.cpp',
    'AI/ScriptDevAI/scripts/outland/tempest_keep/the_eye/boss_kaelthas.cpp',
    'AI/ScriptDevAI/scripts/outland/tempest_keep/the_eye/boss_alar.cpp',
    'AI/ScriptDevAI/scripts/outland/tempest_keep/the_eye/boss_astromancer.cpp',
    'AI/ScriptDevAI/scripts/outland/tempest_keep/the_eye/the_eye.cpp',
    'AI/ScriptDevAI/scripts/outland/hellfire_citadel/blood_furnace/blood_furnace.cpp',
    'AI/ScriptDevAI/scripts/outland/hellfire_citadel/blood_furnace/boss_kelidan_the_breaker.cpp',
    'AI/ScriptDevAI/scripts/outland/hellfire_citadel/blood_furnace/boss_broggok.cpp',
    'AI/ScriptDevAI/scripts/outland/hellfire_citadel/blood_furnace/boss_the_maker.cpp',
    'AI/ScriptDevAI/scripts/outland/hellfire_citadel/shattered_halls/boss_warchief_kargath_bladefist.cpp',
    'AI/ScriptDevAI/scripts/outland/hellfire_citadel/shattered_halls/shattered_halls.cpp',
    'AI/ScriptDevAI/scripts/outland/hellfire_citadel/shattered_halls/shattered_hallsScripts.cpp',
    'AI/ScriptDevAI/scripts/outland/hellfire_citadel/shattered_halls/boss_nethekurse.cpp',
    'AI/ScriptDevAI/scripts/outland/hellfire_citadel/shattered_halls/boss_warbringer_omrogg.cpp',
    'AI/ScriptDevAI/scripts/outland/hellfire_citadel/hellfire_ramparts/boss_watchkeeper_gargolmar.cpp',
    'AI/ScriptDevAI/scripts/outland/hellfire_citadel/hellfire_ramparts/boss_nazan_and_vazruden.cpp',
    'AI/ScriptDevAI/scripts/outland/hellfire_citadel/hellfire_ramparts/hellfire_ramparts.cpp',
    'AI/ScriptDevAI/scripts/outland/hellfire_citadel/hellfire_ramparts/boss_omor_the_unscarred.cpp',
    'AI/ScriptDevAI/scripts/outland/hellfire_citadel/magtheridons_lair/magtheridons_lair.cpp',
    'AI/ScriptDevAI/scripts/outland/hellfire_citadel/magtheridons_lair/boss_magtheridon.cpp',
    'AI/ScriptDevAI/scripts/outland/zangarmarsh.cpp',
    'AI/ScriptDevAI/scripts/outland/black_temple/boss_mother_shahraz.cpp',
    'AI/ScriptDevAI/scripts/outland/black_temple/illidari_council.cpp',
    'AI/ScriptDevAI/scripts/outland/black_temple/boss_illidan.cpp',
    'AI/ScriptDevAI/scripts/outland/black_temple/black_temple.cpp',
    'AI/ScriptDevAI/scripts/outland/black_temple/boss_supremus.cpp',
    'AI/ScriptDevAI/scripts/outland/black_temple/boss_shade_of_akama.cpp',
    'AI/ScriptDevAI/scripts/outland/black_temple/boss_reliquary_of_souls.cpp',
    'AI/ScriptDevAI/scripts/outland/black_temple/black_templeScripts.cpp',
    'AI/ScriptDevAI/scripts/outland/black_temple/boss_bloodboil.cpp',
    'AI/ScriptDevAI/scripts/outland/black_temple/boss_teron_gorefiend.cpp',
    'AI/ScriptDevAI/scripts/outland/black_temple/boss_warlord_najentus.cpp',
    'AI/ScriptDevAI/scripts/outland/auchindoun/auchenai_crypts/boss_exarch_maladaar.cpp',
    'AI/ScriptDevAI/scripts/outland/auchindoun/auchenai_crypts/boss_shirrak.cpp',
    'AI/ScriptDevAI/scripts/outland/auchindoun/shadow_labyrinth/boss_ambassador_hellmaw.cpp',
    'AI/ScriptDevAI/scripts/outland/auchindoun/shadow_labyrinth/boss_grandmaster_vorpil.cpp',
    'AI/ScriptDevAI/scripts/outland/auchindoun/shadow_labyrinth/boss_murmur.cpp',
    'AI/ScriptDevAI/scripts/outland/auchindoun/shadow_labyrinth/shadow_labyrinth.cpp',
    'AI/ScriptDevAI/scripts/outland/auchindoun/shadow_labyrinth/boss_blackheart_the_inciter.cpp',
    'AI/ScriptDevAI/scripts/outland/auchindoun/mana_tombs/boss_yor.cpp',
    'AI/ScriptDevAI/scripts/outland/auchindoun/mana_tombs/mana_tombsScripts.cpp',
    'AI/ScriptDevAI/scripts/outland/auchindoun/mana_tombs/boss_nexusprince_shaffar.cpp',
    'AI/ScriptDevAI/scripts/outland/auchindoun/mana_tombs/boss_pandemonius.cpp',
    'AI/ScriptDevAI/scripts/outland/auchindoun/sethekk_halls/boss_anzu.cpp',
    'AI/ScriptDevAI/scripts/outland/auchindoun/sethekk_halls/sethekk_halls.cpp',
    'AI/ScriptDevAI/scripts/outland/auchindoun/sethekk_halls/boss_darkweaver_syth.cpp',
    'AI/ScriptDevAI/scripts/outland/auchindoun/sethekk_halls/boss_talon_king_ikiss.cpp',
    'AI/ScriptDevAI/scripts/outland/blades_edge_mountains.cpp',
    'AI/ScriptDevAI/scripts/outland/boss_terokk.cpp',
    'AI/ScriptDevAI/scripts/outland/boss_doomlord_kazzak.cpp',
    'AI/ScriptDevAI/scripts/outland/netherstorm.cpp',
    'AI/ScriptDevAI/scripts/outland/shattrath_city.cpp',
    'AI/ScriptDevAI/scripts/outland/boss_doomwalker.cpp',
    'AI/ScriptDevAI/scripts/outland/world_outland.cpp',
    'AI/ScriptDevAI/scripts/outland/gruuls_lair/boss_high_king_maulgar.cpp',
    'AI/ScriptDevAI/scripts/outland/gruuls_lair/boss_gruul.cpp',
    'AI/ScriptDevAI/scripts/outland/gruuls_lair/gruuls_lair.cpp',
    'AI/ScriptDevAI/scripts/outland/coilfang_reservoir/slave_pens/boss_ahune.cpp',
    'AI/ScriptDevAI/scripts/outland/coilfang_reservoir/slave_pens/slave_pens.cpp',
    'AI/ScriptDevAI/scripts/outland/coilfang_reservoir/serpent_shrine/boss_hydross_the_unstable.cpp',
    'AI/ScriptDevAI/scripts/outland/coilfang_reservoir/serpent_shrine/boss_fathomlord_karathress.cpp',
    'AI/ScriptDevAI/scripts/outland/coilfang_reservoir/serpent_shrine/boss_leotheras_the_blind.cpp',
    'AI/ScriptDevAI/scripts/outland/coilfang_reservoir/serpent_shrine/boss_lady_vashj.cpp',
    'AI/ScriptDevAI/scripts/outland/coilfang_reservoir/serpent_shrine/serpent_shrine.cpp',
    'AI/ScriptDevAI/scripts/outland/coilfang_reservoir/serpent_shrine/boss_morogrim_tidewalker.cpp',
    'AI/ScriptDevAI/scripts/outland/coilfang_reservoir/serpent_shrine/boss_the_lurker_below.cpp',
    'AI/ScriptDevAI/scripts/outland/coilfang_reservoir/underbog/boss_swamplord_muselek.cpp',
    'AI/ScriptDevAI/scripts/outland/coilfang_reservoir/underbog/boss_black_stalker.cpp',
    'AI/ScriptDevAI/scripts/outland/coilfang_reservoir/underbog/underbog.cpp',
    'AI/ScriptDevAI/scripts/outland/coilfang_reservoir/underbog/boss_hungarfen.cpp',
    'AI/ScriptDevAI/scripts/outland/coilfang_reservoir/steam_vault/steam_vault.cpp',
    'AI/ScriptDevAI/scripts/outland/coilfang_reservoir/steam_vault/boss_warlord_kalithresh.cpp',
    'AI/ScriptDevAI/scripts/outland/coilfang_reservoir/steam_vault/boss_hydromancer_thespia.cpp',
    'AI/ScriptDevAI/scripts/outland/coilfang_reservoir/steam_vault/boss_mekgineer_steamrigger.cpp',
    'AI/ScriptDevAI/scripts/outland/shadowmoon_valley.cpp',
    'AI/ScriptDevAI/scripts/outland/bashir_landing.cpp',
    'AI/ScriptDevAI/scripts/outland/shartuul_transporter.cpp',
    'AI/ScriptDevAI/scripts/outland/terokkar_forest.cpp',
    'AI/ScriptDevAI/scripts/northrend/wintergrasp.cpp',
    'AI/ScriptDevAI/scripts/northrend/world_northrend.cpp',
    'AI/ScriptDevAI/scripts/northrend/grizzly_hills.cpp',
    'AI/ScriptDevAI/scripts/northrend/dalaran.cpp',
    'AI/ScriptDevAI/scripts/northrend/nexus/nexus/boss_telestra.cpp',
    'AI/ScriptDevAI/scripts/northrend/nexus/nexus/boss_anomalus.cpp',
    'AI/ScriptDevAI/scripts/northrend/nexus/nexus/nexus.cpp',
    'AI/ScriptDevAI/scripts/northrend/nexus/nexus/boss_keristrasza.cpp',
    'AI/ScriptDevAI/scripts/northrend/nexus/nexus/boss_ormorok.cpp',
    'AI/ScriptDevAI/scripts/northrend/nexus/oculus/oculus.cpp',
    'AI/ScriptDevAI/scripts/northrend/nexus/oculus/oculusScripts.cpp',
    'AI/ScriptDevAI/scripts/northrend/nexus/oculus/boss_varos.cpp',
    'AI/ScriptDevAI/scripts/northrend/nexus/oculus/boss_urom.cpp',
    'AI/ScriptDevAI/scripts/northrend/nexus/oculus/boss_eregos.cpp',
    'AI/ScriptDevAI/scripts/northrend/nexus/eye_of_eternity/boss_malygos.cpp',
    'AI/ScriptDevAI/scripts/northrend/nexus/eye_of_eternity/eye_of_eternity.cpp',
    'AI/ScriptDevAI/scripts/northrend/icecrown_citadel/frozen_halls/forge_of_souls/forge_of_souls.cpp',
    'AI/ScriptDevAI/scripts/northrend/icecrown_citadel/frozen_halls/forge_of_souls/boss_bronjahm.cpp',
    'AI/ScriptDevAI/scripts/northrend/icecrown_citadel/frozen_halls/forge_of_souls/boss_devourer_of_souls.cpp',
    'AI/ScriptDevAI/scripts/northrend/icecrown_citadel/frozen_halls/halls_of_reflection/boss_lich_king.cpp',
    'AI/ScriptDevAI/scripts/northrend/icecrown_citadel/frozen_halls/halls_of_reflection/halls_of_reflection.cpp',
    'AI/ScriptDevAI/scripts/northrend/icecrown_citadel/frozen_halls/halls_of_reflection/halls_of_reflectionScripts.cpp',
    'AI/ScriptDevAI/scripts/northrend/icecrown_citadel/frozen_halls/pit_of_saron/pit_of_saronScripts.cpp',
    'AI/ScriptDevAI/scripts/northrend/icecrown_citadel/frozen_halls/pit_of_saron/boss_scourgelord_tyrannus.cpp',
    'AI/ScriptDevAI/scripts/northrend/icecrown_citadel/frozen_halls/pit_of_saron/boss_krick_and_ick.cpp',
    'AI/ScriptDevAI/scripts/northrend/icecrown_citadel/frozen_halls/pit_of_saron/boss_forgemaster_garfrost.cpp',
    'AI/ScriptDevAI/scripts/northrend/icecrown_citadel/frozen_halls/pit_of_saron/pit_of_saron.cpp',
    'AI/ScriptDevAI/scripts/northrend/icecrown_citadel/icecrown_citadel/boss_blood_queen_lanathel.cpp',
    'AI/ScriptDevAI/scripts/northrend/icecrown_citadel/icecrown_citadel/icecrown_citadel.cpp',
    'AI/ScriptDevAI/scripts/northrend/icecrown_citadel/icecrown_citadel/boss_sindragosa.cpp',
    'AI/ScriptDevAI/scripts/northrend/icecrown_citadel/icecrown_citadel/boss_festergut.cpp',
    'AI/ScriptDevAI/scripts/northrend/icecrown_citadel/icecrown_citadel/boss_lady_deathwhisper.cpp',
    'AI/ScriptDevAI/scripts/northrend/icecrown_citadel/icecrown_citadel/gunship_battle.cpp',
    'AI/ScriptDevAI/scripts/northrend/icecrown_citadel/icecrown_citadel/icecrown_citadelScripts.cpp',
    'AI/ScriptDevAI/scripts/northrend/icecrown_citadel/icecrown_citadel/blood_prince_council.cpp',
    'AI/ScriptDevAI/scripts/northrend/icecrown_citadel/icecrown_citadel/boss_deathbringer_saurfang.cpp',
    'AI/ScriptDevAI/scripts/northrend/icecrown_citadel/icecrown_citadel/boss_lord_marrowgar.cpp',
    'AI/ScriptDevAI/scripts/northrend/icecrown_citadel/icecrown_citadel/boss_valithria_dreamwalker.cpp',
    'AI/ScriptDevAI/scripts/northrend/icecrown_citadel/icecrown_citadel/boss_the_lich_king.cpp',
    'AI/ScriptDevAI/scripts/northrend/icecrown_citadel/icecrown_citadel/boss_professor_putricide.cpp',
    'AI/ScriptDevAI/scripts/northrend/icecrown_citadel/icecrown_citadel/boss_rotface.cpp',
    'AI/ScriptDevAI/scripts/northrend/naxxramas/boss_patchwerk.cpp',
    'AI/ScriptDevAI/scripts/northrend/naxxramas/boss_heigan.cpp',
    'AI/ScriptDevAI/scripts/northrend/naxxramas/boss_anubrekhan.cpp',
    'AI/ScriptDevAI/scripts/northrend/naxxramas/boss_thaddius.cpp',
    'AI/ScriptDevAI/scripts/northrend/naxxramas/boss_noth.cpp',
    'AI/ScriptDevAI/scripts/northrend/naxxramas/naxxramas.cpp',
    'AI/ScriptDevAI/scripts/northrend/naxxramas/naxxramasScripts.cpp',
    'AI/ScriptDevAI/scripts/northrend/naxxramas/boss_four_horsemen.cpp',
    'AI/ScriptDevAI/scripts/northrend/naxxramas/boss_gothik.cpp',
    'AI/ScriptDevAI/scripts/northrend/naxxramas/boss_sapphiron.cpp',
    'AI/ScriptDevAI/scripts/northrend/naxxramas/boss_gluth.cpp',
    'AI/ScriptDevAI/scripts/northrend/naxxramas/boss_maexxna.cpp',
    'AI/ScriptDevAI/scripts/northrend/naxxramas/boss_kelthuzad.cpp',
    'AI/ScriptDevAI/scripts/northrend/naxxramas/boss_faerlina.cpp',
    'AI/ScriptDevAI/scripts/northrend/naxxramas/boss_razuvious.cpp',
    'AI/ScriptDevAI/scripts/northrend/naxxramas/boss_loatheb.cpp',
    'AI/ScriptDevAI/scripts/northrend/naxxramas/boss_grobbulus.cpp',
    'AI/ScriptDevAI/scripts/northrend/ulduar/halls_of_stone/halls_of_stoneScripts.cpp',
    'AI/ScriptDevAI/scripts/northrend/ulduar/halls_of_stone/halls_of_stone.cpp',
    'AI/ScriptDevAI/scripts/northrend/ulduar/halls_of_stone/boss_sjonnir.cpp',
    'AI/ScriptDevAI/scripts/northrend/ulduar/halls_of_lightning/instance_halls_of_lightning.cpp',
    'AI/ScriptDevAI/scripts/northrend/ulduar/halls_of_lightning/boss_loken.cpp',
    'AI/ScriptDevAI/scripts/northrend/ulduar/halls_of_lightning/boss_bjarngrim.cpp',
    'AI/ScriptDevAI/scripts/northrend/ulduar/halls_of_lightning/boss_ionar.cpp',
    'AI/ScriptDevAI/scripts/northrend/ulduar/halls_of_lightning/boss_volkhan.cpp',
    'AI/ScriptDevAI/scripts/northrend/ulduar/ulduar/boss_xt_002.cpp',
    'AI/ScriptDevAI/scripts/northrend/ulduar/ulduar/assembly_of_iron.cpp',
    'AI/ScriptDevAI/scripts/northrend/ulduar/ulduar/boss_algalon.cpp',
    'AI/ScriptDevAI/scripts/northrend/ulduar/ulduar/boss_freya.cpp',
    'AI/ScriptDevAI/scripts/northrend/ulduar/ulduar/boss_razorscale.cpp',
    'AI/ScriptDevAI/scripts/northrend/ulduar/ulduar/boss_mimiron.cpp',
    'AI/ScriptDevAI/scripts/northrend/ulduar/ulduar/boss_ignis.cpp',
    'AI/ScriptDevAI/scripts/northrend/ulduar/ulduar/boss_thorim.cpp',
    'AI/ScriptDevAI/scripts/northrend/ulduar/ulduar/boss_yogg_saron.cpp',
    'AI/ScriptDevAI/scripts/northrend/ulduar/ulduar/boss_auriaya.cpp',
    'AI/ScriptDevAI/scripts/northrend/ulduar/ulduar/ulduar.cpp',
    'AI/ScriptDevAI/scripts/northrend/ulduar/ulduar/boss_kologarn.cpp',
    'AI/ScriptDevAI/scripts/northrend/ulduar/ulduar/boss_flame_leviathan.cpp',
    'AI/ScriptDevAI/scripts/northrend/ulduar/ulduar/ulduarScripts.cpp',
    'AI/ScriptDevAI/scripts/northrend/ulduar/ulduar/boss_hodir.cpp',
    'AI/ScriptDevAI/scripts/northrend/ulduar/ulduar/boss_general_vezax.cpp',
    'AI/ScriptDevAI/scripts/northrend/crusaders_coliseum/trial_of_the_crusader/trial_of_the_crusaderScripts.cpp',
    'AI/ScriptDevAI/scripts/northrend/crusaders_coliseum/trial_of_the_crusader/trial_of_the_crusader.cpp',
    'AI/ScriptDevAI/scripts/northrend/crusaders_coliseum/trial_of_the_crusader/boss_twin_valkyr.cpp',
    'AI/ScriptDevAI/scripts/northrend/crusaders_coliseum/trial_of_the_crusader/boss_jaraxxus.cpp',
    'AI/ScriptDevAI/scripts/northrend/crusaders_coliseum/trial_of_the_crusader/boss_anubarak_trial.cpp',
    'AI/ScriptDevAI/scripts/northrend/crusaders_coliseum/trial_of_the_crusader/boss_faction_champions.cpp',
    'AI/ScriptDevAI/scripts/northrend/crusaders_coliseum/trial_of_the_crusader/boss_northrend_beasts.cpp',
    'AI/ScriptDevAI/scripts/northrend/crusaders_coliseum/trial_of_the_champion/boss_black_knight.cpp',
    'AI/ScriptDevAI/scripts/northrend/crusaders_coliseum/trial_of_the_champion/boss_grand_champions.cpp',
    'AI/ScriptDevAI/scripts/northrend/crusaders_coliseum/trial_of_the_champion/instance_trial_of_the_champion.cpp',
    'AI/ScriptDevAI/scripts/northrend/crusaders_coliseum/trial_of_the_champion/trial_of_the_champion.cpp',
    'AI/ScriptDevAI/scripts/northrend/crusaders_coliseum/trial_of_the_champion/boss_argent_challenge.cpp',
    'AI/ScriptDevAI/scripts/northrend/obsidian_sanctum/boss_sartharion.cpp',
    'AI/ScriptDevAI/scripts/northrend/obsidian_sanctum/obsidian_sanctum.cpp',
    'AI/ScriptDevAI/scripts/northrend/sholazar_basin.cpp',
    'AI/ScriptDevAI/scripts/northrend/dragonblight.cpp',
    'AI/ScriptDevAI/scripts/northrend/ruby_sanctum/boss_baltharus.cpp',
    'AI/ScriptDevAI/scripts/northrend/ruby_sanctum/boss_halion.cpp',
    'AI/ScriptDevAI/scripts/northrend/ruby_sanctum/boss_zarithrian.cpp',
    'AI/ScriptDevAI/scripts/northrend/ruby_sanctum/ruby_sanctumScripts.cpp',
    'AI/ScriptDevAI/scripts/northrend/ruby_sanctum/boss_saviana.cpp',
    'AI/ScriptDevAI/scripts/northrend/ruby_sanctum/ruby_sanctum.cpp',
    'AI/ScriptDevAI/scripts/northrend/howling_fjord.cpp',
    'AI/ScriptDevAI/scripts/northrend/utgarde_keep/utgarde_pinnacle/utgarde_pinnacle.cpp',
    'AI/ScriptDevAI/scripts/northrend/utgarde_keep/utgarde_pinnacle/boss_gortok.cpp',
    'AI/ScriptDevAI/scripts/northrend/utgarde_keep/utgarde_pinnacle/boss_ymiron.cpp',
    'AI/ScriptDevAI/scripts/northrend/utgarde_keep/utgarde_pinnacle/boss_svala.cpp',
    'AI/ScriptDevAI/scripts/northrend/utgarde_keep/utgarde_pinnacle/boss_skadi.cpp',
    'AI/ScriptDevAI/scripts/northrend/utgarde_keep/utgarde_keep/boss_keleseth.cpp',
    'AI/ScriptDevAI/scripts/northrend/utgarde_keep/utgarde_keep/utgarde_keep.cpp',
    'AI/ScriptDevAI/scripts/northrend/utgarde_keep/utgarde_keep/utgarde_keepScripts.cpp',
    'AI/ScriptDevAI/scripts/northrend/utgarde_keep/utgarde_keep/boss_ingvar.cpp',
    'AI/ScriptDevAI/scripts/northrend/storm_peaks.cpp',
    'AI/ScriptDevAI/scripts/northrend/gundrak/boss_eck.cpp',
    'AI/ScriptDevAI/scripts/northrend/gundrak/boss_galdarah.cpp',
    'AI/ScriptDevAI/scripts/northrend/gundrak/boss_colossus.cpp',
    'AI/ScriptDevAI/scripts/northrend/gundrak/boss_moorabi.cpp',
    'AI/ScriptDevAI/scripts/northrend/gundrak/gundrak.cpp',
    'AI/ScriptDevAI/scripts/northrend/gundrak/boss_sladran.cpp',
    'AI/ScriptDevAI/scripts/northrend/icecrown.cpp',
    'AI/ScriptDevAI/scripts/northrend/draktharon_keep/boss_trollgore.cpp',
    'AI/ScriptDevAI/scripts/northrend/draktharon_keep/boss_tharonja.cpp',
    'AI/ScriptDevAI/scripts/northrend/draktharon_keep/instance_draktharon_keep.cpp',
    'AI/ScriptDevAI/scripts/northrend/draktharon_keep/boss_novos.cpp',
    'AI/ScriptDevAI/scripts/northrend/vault_of_archavon/boss_archavon.cpp',
    'AI/ScriptDevAI/scripts/northrend/vault_of_archavon/boss_toravon.cpp',
    'AI/ScriptDevAI/scripts/northrend/vault_of_archavon/boss_koralon.cpp',
    'AI/ScriptDevAI/scripts/northrend/vault_of_archavon/boss_emalon.cpp',
    'AI/ScriptDevAI/scripts/northrend/vault_of_archavon/instance_vault_of_archavon.cpp',
    'AI/ScriptDevAI/scripts/northrend/azjol-nerub/azjol-nerub/boss_hadronox.cpp',
    'AI/ScriptDevAI/scripts/northrend/azjol-nerub/azjol-nerub/boss_krikthir.cpp',
    'AI/ScriptDevAI/scripts/northrend/azjol-nerub/azjol-nerub/azjol-nerub.cpp',
    'AI/ScriptDevAI/scripts/northrend/azjol-nerub/azjol-nerub/boss_anubarak.cpp',
    'AI/ScriptDevAI/scripts/northrend/azjol-nerub/ahnkahet/boss_nadox.cpp',
    'AI/ScriptDevAI/scripts/northrend/azjol-nerub/ahnkahet/boss_amanitar.cpp',
    'AI/ScriptDevAI/scripts/northrend/azjol-nerub/ahnkahet/ahnkahet.cpp',
    'AI/ScriptDevAI/scripts/northrend/azjol-nerub/ahnkahet/boss_volazj.cpp',
    'AI/ScriptDevAI/scripts/northrend/azjol-nerub/ahnkahet/boss_jedoga.cpp',
    'AI/ScriptDevAI/scripts/northrend/azjol-nerub/ahnkahet/boss_taldaram.cpp',
    'AI/ScriptDevAI/scripts/northrend/borean_tundra.cpp',
    'AI/ScriptDevAI/scripts/northrend/violet_hold/boss_ichoron.cpp',
    'AI/ScriptDevAI/scripts/northrend/violet_hold/violet_holdScripts.cpp',
    'AI/ScriptDevAI/scripts/northrend/violet_hold/boss_xevozz.cpp',
    'AI/ScriptDevAI/scripts/northrend/violet_hold/violet_hold.cpp',
    'AI/ScriptDevAI/scripts/northrend/zuldrak.cpp',
    'AI/ScriptDevAI/scripts/examples/example_escort.cpp',
    'AI/ScriptDevAI/scripts/examples/example_creature.cpp',
    'AI/ScriptDevAI/scripts/examples/example_misc.cpp',
    'AI/ScriptDevAI/scripts/examples/example_gossip_codebox.cpp',
]

playerbot_sources = [
    'PlayerBot/Base/PlayerbotClassAI.cpp',
    'PlayerBot/Base/PlayerbotMgr.cpp',
    'PlayerBot/Base/PlayerbotAI.cpp',
    'PlayerBot/AI/PlayerbotDruidAI.cpp',
    'PlayerBot/AI/PlayerbotWarlockAI.cpp',
    'PlayerBot/AI/PlayerbotDeathKnightAI.cpp',
    'PlayerBot/AI/PlayerbotMageAI.cpp',
    'PlayerBot/AI/PlayerbotPriestAI.cpp',
    'PlayerBot/AI/PlayerbotWarriorAI.cpp',
    'PlayerBot/AI/PlayerbotHunterAI.cpp',
    'PlayerBot/AI/PlayerbotRogueAI.cpp',
    'PlayerBot/AI/PlayerbotShamanAI.cpp',
    'PlayerBot/AI/PlayerbotPaladinAI.cpp',
]

game_inc_dirs = ['.', 'Vmap', 'AuctionHouseBot', 'BattleGround', 'OutdoorPvP', 'PlayerBot']

if utfcpp_dep.found() == false
  game_inc_dirs = [game_inc_dirs, '../../dep/include/utf8cpp']
endif

if build_machine.system() == 'windows'
  game_inc_dirs = game_inc_dirs + ['../../dep/lib/include', '../../dep/lib/include/mysql']
endif

game_inc = include_directories(game_inc_dirs)

if get_option('BUILD_SCRIPTDEV')
  game_sources = [game_sources, scriptdev_sources]
endif

if get_option('BUILD_PLAYERBOT')
  game_sources = [game_sources, playerbot_sources]
  install_data('PlayerBot/playerbot.conf.dist.in', rename: 'playerbot.conf.dist', install_dir: 'etc')
endif

if not get_option('USE_ANTICHEAT')
  game_sources = [game_sources, './Anticheat/Anticheat.cpp']
else
  install_data('Anticheat/module/anticheat.conf.dist.in', rename: 'anticheat.conf.dist', install_dir: 'etc')
  install_subdir('Anticheat/module/warden_modules', install_dir : 'bin') # mydir subtree -> include/mydir
endif

if get_option('BUILD_AHBOT')
  install_data('AuctionHouseBot/ahbot.conf.dist.in', rename: 'ahbot.conf.dist', install_dir: 'etc')
endif

if not get_option('PCH')
  pch_files = []
else
  pch_files = ['../game/pchdef.h']
endif

game_args = ['-DDT_POLYREF64', '-D__ASSERT_MACROS_DEFINE_VERSIONS_WITHOUT_UNDERSCORES=0']

if get_option('BUILD_GAME_SERVER')
gamelib = static_library('game',
                        game_sources,
                        include_directories: [game_inc, global_includes],
                        dependencies: [zlib_dep, boost_dep, dblib_dep, utfcpp_dep],
                        link_with: [frameworklib, sharedlib, g3dlib, detourlib],
                        cpp_args: game_args,
                        cpp_pch: pch_files,
                        install : false
)
endif
